--- a/_posts/2017-11-19-NewNotes.md
+++ b/_posts/2017-11-19-NewNotes.md
@@ -1,8 +1,9 @@
 ---
-published: false
+published: ture
 layout: post
 title: Post Instruction
 image: 'https://rfd3344.github.io/images/Eeveelution.png'
+publish: ture;
 ---
 ## A New Post
 layout: post
