--- a/_posts/2017-11-19-NewNotes.md
+++ b/_posts/2017-11-19-NewNotes.md
@@ -4,10 +4,11 @@ layout: post
 title: Post Instruction
 image: 'https://rfd3344.github.io/images/Eeveelution.png'
 publish: ture;
+Meta Data setting: null
 ---
-## A New Post
+
+Meta Data setting:
+published: ture
 layout: post
-
 title: Post Instruction
-
 image: https://rfd3344.github.io/images/Eeveelution.png
